correction likeTopic et beautify

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+server.port=8080
