--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=1234
 server.servlet.context-path=/api
+
+# Requis pour contourner un bug Springfox
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
